--- a/templates/article/index.html.twig
+++ b/templates/article/index.html.twig
@@ -12,7 +12,7 @@
         <div class="row">
         {% for article in articles %}
           <div class="col-md-4">
-            <div class="card mb-4 shadow-sm dragger">
+            <div id="draggable" class="card mb-4 shadow-sm dragger">
               <img class="bd-placeholder-img card-img-top"
                 width="100%"
                 height="225"
