--- a/templates/article/index.html.twig
+++ b/templates/article/index.html.twig
@@ -4,23 +4,26 @@
 
 {% block body %}
 
-    <h1>Article index</h1>
-
     <main role="main">
-    <div class="album py-5 bg-light">
+    <div class="album py-5">
       <div class="container">
         <div class="row">
         {% for article in articles %}
-          <div class="col-md-4">
-            <div id="draggable" class="card mb-4 shadow-sm dragger">
+          <div id="draggable" class="col-md-4 dragger">
+            <div class="carte mb-4">
+            <div class="center-screen">
+              <img style="width:50px;height:50px;" src="{{ asset('img/14690.png')}}"/>
+            </div>
+            {% if article.image %}
               <img class="bd-placeholder-img card-img-top"
-                width="100%"
+                width="80%"
                 height="225"
                 src="{{ asset(article.image.imgPath) }}" />
+                {% endif %}
               <!-- <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Thumbnail"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg> -->
               <div class="card-body">
                 <p class="card-text">
-                  {{ article.content }}
+                  {{ article.content | raw }}
                 </p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
@@ -31,7 +34,7 @@
                     <a href="{{ path('article_edit', {'id': article.id}) }}"><button class="btn-primary" style="width:30px;height:30px;"><i class="fas fa-edit"></i></button></a>
                     {{ include('article/_delete_form.html.twig') }}
                   </div>
-                  <small class="text-muted">9 mins</small>
+                  <small class="text-muted">{{ article.createdAt | date("d F Y") }}</small>
                 </div>
               </div>
             </div>
