--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,15 +1,37 @@
-body, html {
-  height:90%;
-  background-image: url(../img/liege.jpg);
+body,html{
+  height:100%;
+  overflow-y: visible;
+}
+
+.main-page {
+  height:100%;
+  background-image: url(../img/bgd.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   background-position-x: center;
   }
 
-  
+  .centerDiv
+    {
+      display:none;
+      width: 20%;
+    height: 50%;
+    margin: 0 auto;
+    background-color: #ffffa5;;
+    position: absolute;
+    left: 100px;
+    border: 1px solid black;
+    z-index: 3;
+    top: 30px;
+    }
+    
+  .dragger{
+    z-index:2;
+  }
     .center-screen {
         position:absolute;
         left:40%;
+        top:-5%;
         }
 
    .carte {
@@ -24,6 +46,8 @@ transform: rotate(2deg);
 -o-transform: rotate(2deg);
 -ms-transform: rotate(2deg);
 border-bottom-right-radius: 60px 10px;
+max-width: 300px;
+
    }     
 
  /* Slideshow container */
@@ -47,3 +71,71 @@ q {font-style: italic;}
 
 /* Add a blue color to the author */
 .author {color: cornflowerblue;} 
+
+#flipbook{
+  width:1024px;
+  height: 600px;
+  position:absolute;
+  
+
+}
+
+#flipbook .page{
+  width:1024px;
+  height:600px;
+  background-color:white;
+  line-height:300px;
+  font-size:20px;
+  text-align:center;
+}
+
+#flipbook .page-wrapper{
+  -webkit-perspective:2000px;
+  -moz-perspective:2000px;
+  -ms-perspective:2000px;
+  -o-perspective:2000px;
+  perspective:2000px;
+  
+}
+
+#flipbook .hard{
+  /*background:rgb(187, 187, 187) !important;*/
+  color:#333;
+  background-image: url('/img/tableau.jpg');
+  background-size: cover;
+  -webkit-box-shadow:inset 0 0 5px #666;
+  -moz-box-shadow:inset 0 0 5px #666;
+  -o-box-shadow:inset 0 0 5px #666;
+  -ms-box-shadow:inset 0 0 5px #666;
+  box-shadow:inset 0 0 5px #666;
+  font-weight:bold;
+}
+
+#flipbook .odd{
+  background:-webkit-gradient(linear, right top, left top, color-stop(0.95, #FFF), color-stop(1, #DADADA));
+  background-image:-webkit-linear-gradient(right, #FFF 95%, #C4C4C4 100%);
+  background-image:-moz-linear-gradient(right, #FFF 95%, #C4C4C4 100%);
+  background-image:-ms-linear-gradient(right, #FFF 95%, #C4C4C4 100%);
+  background-image:-o-linear-gradient(right, #FFF 95%, #C4C4C4 100%);
+  background-image:linear-gradient(right, #FFF 95%, #C4C4C4 100%);
+  -webkit-box-shadow:inset 0 0 5px #666;
+  -moz-box-shadow:inset 0 0 5px #666;
+  -o-box-shadow:inset 0 0 5px #666;
+  -ms-box-shadow:inset 0 0 5px #666;
+  box-shadow:inset 0 0 5px #666;
+  
+}
+
+#flipbook .even{
+  background:-webkit-gradient(linear, left top, right top, color-stop(0.95, #fff), color-stop(1, #dadada));
+  background-image:-webkit-linear-gradient(left, #fff 95%, #dadada 100%);
+  background-image:-moz-linear-gradient(left, #fff 95%, #dadada 100%);
+  background-image:-ms-linear-gradient(left, #fff 95%, #dadada 100%);
+  background-image:-o-linear-gradient(left, #fff 95%, #dadada 100%);
+  background-image:linear-gradient(left, #fff 95%, #dadada 100%);
+  -webkit-box-shadow:inset 0 0 5px #666;
+  -moz-box-shadow:inset 0 0 5px #666;
+  -o-box-shadow:inset 0 0 5px #666;
+  -ms-box-shadow:inset 0 0 5px #666;
+  box-shadow:inset 0 0 5px #666;
+}
