--- a/templates/article/index.html.twig
+++ b/templates/article/index.html.twig
@@ -1,124 +1,140 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Article index{% endblock %}
+{% block title %}Article index
+{% endblock %}
 {% block stylesheets %}
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<link rel="stylesheet" href="{{ asset("css/styles.css") }}">
-<link rel="stylesheet" href="{{ asset("css/jquery-ui.css") }}">
-<link rel="stylesheet" href="{{ asset("css/jquery-ui.structure.css") }}">
-<link rel="stylesheet" href="{{ asset("css/jquery-ui.theme.css") }}">
-<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<link rel="stylesheet" href="{{ asset("css/styles.css") }}">
+	<link rel="stylesheet" href="{{ asset("css/jquery-ui.css") }}">
+	<link rel="stylesheet" href="{{ asset("css/jquery-ui.structure.css") }}">
+	<link rel="stylesheet" href="{{ asset("css/jquery-ui.theme.css") }}">
+	<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/spectrum-colorpicker2@2.0.0/dist/spectrum.min.css">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 {% endblock %}
 {% block body %}
-<div class="centerDiv">
-<h2>Créer un post-it</h2>
-  <div class="form-group">
-    <label for="exampleFormControlInput1">Titre</label>
-    <input type="text" class="form-control" name="title" id="title" placeholder="Titre du post-it">
-  </div>
-  <div class="form-group">
-    <label for="exampleFormControlTextarea1">Contenu</label>
-    <textarea class="form-control" id="content" name="content" id="exampleFormControlTextarea1" rows="5" placeholder="Contenu du post-it"></textarea>
-  </div>
-  <button type="submit" id="create" class="btn btn-primary mb-2 float-right">Créer le post-it</button>
-</div>
-    <div class="main-page" style = "height:100%;">
-    <div class="d-flex justify-content-center">
-    <p>Date: <input type="text" id="datepicker"></p>
-    </div>
-      
-    <div class="album py-5">
-      <div class="container">
-        <div class="row">
-        {% for article in articles %}
-          <div class="col-md-4">
-            <div id="draggable" class="carte mb-4 dragger">
-            <div class="center-screen">
-              <img style="width:50px;height:50px;" src="{{ asset('img/14690.png')}}"/>
-            </div>
-            {% if article.image %}
-              <img class="bd-placeholder-img card-img-top"
-                width="80%"
-                height="225"
-                src="{{ asset(article.image.imgPath) }}" />
-                {% endif %}
-              <!-- <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Thumbnail"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg> -->
-              <div class="card-body">
-                <p class="card-text">
-                  {{ article.content | raw }}
-                </p>
-                <div class="d-flex justify-content-between align-items-center">
-                  <div class="btn-group">
-                    <button type="button"
-                      class="btn btn-sm btn-outline-secondary">
-                      Macramé
-                    </button>
-                    <a href="{{ path('article_edit', {'id': article.id}) }}"><button class="btn-primary" style="width:30px;height:30px;"><i class="fas fa-edit"></i></button></a>
-                    {{ include('article/_delete_form.html.twig') }}
-                  </div>
-                  <small class="text-muted">{{ article.createdAt | date("d F Y") }}</small>
-                </div>
-              </div>
-            </div>
-          </div>
-          {% else %}
-  <tr>
-    <td colspan="4">
-      no records found
-    </td>
-  </tr>
-  {% endfor %}
-        </div>
-</div>
-  </div>
+	<div class="centerDiv">
+		<h2>Créer un post-it</h2>
+		<div class="form-group">
+			<label for="exampleFormControlInput1">Titre</label>
+			<input type="text" class="form-control" name="title" id="title" placeholder="Titre du post-it">
+		</div>
+		<div class="form-group">
+			<label for="exampleFormControlTextarea1">Contenu</label>
+			<textarea class="form-control" id="content" name="content" id="exampleFormControlTextarea1" rows="5" placeholder="Contenu du post-it"></textarea>
+		</div>
+		<input id="color-picker" name="color" value="#ffffff"/>
+		<button id="cancel" class="btn btn-danger mb-2">Annuler</button>
+		<button type="submit" id="create" class="btn btn-primary mb-2 float-right">Créer le post-it</button>
+	</div>
+	<div class="main-page">
+		<div class="d-flex justify-content-center">
+			<p>Date:
+				<input type="text" id="datepicker"></p>
+		</div>
 
-    <a href="{{ path('article_new') }}">Create new</a>
-    
+		<div class="album py-5">
+			<div class="container">
+				<div class="row">
+					{% for article in articles %}
+						<div class="col-md-4">
+							<div id="draggable" class="carte mb-4 dragger" style="background-color:{{ article.color }};left:{{ article.positionx }} px;top:{{ article.positiony }} px">
+								<div class="center-screen">
+
+									<img style="width:50px;height:50px;" src="{{ asset('img/14690.png')}}"/>
+								</div>
+								<h3 style="font-weight:bold;">{{ article.title }}</h3>
+								{% if article.image %}
+									<img class="bd-placeholder-img card-img-top" width="80%" height="225" src="{{ asset(article.image.imgPath) }}"/>
+								{% endif %}
+								<!-- <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Thumbnail"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg> -->
+								<div class="card-body">
+									<p class="card-text">
+										{{ article.content | raw }}
+									</p>
+									<div class="d-flex justify-content-between align-items-center">
+										<div class="btn-group">
+
+
+											{{ include('article/_delete_form.html.twig') }}
+										</div>
+										<small class="text-muted dater">{{ article.createdAt | date("d/F/Y") }}</small>
+									</div>
+								</div>
+							</div>
+						</div>
+					{% else %}
+						<tr>
+							<td colspan="4">
+								no records found
+							</td>
+						</tr>
+					{% endfor %}
+				</div>
+
+			</div>
+
+		</div>
+
+
+	</div>
+	<div class="full-width">
+		{% for image in images %}
+			<div class="gallery">
+				<img id="draggable" class="dragger" src="http://leo-souly-modula.fr/{{ image.imgPath }}" width="600" height="400">
+			</div>
+		{% endfor %}
+	</div>
+
 {% endblock %}
 {% block javascripts %}
-        <script src="{{ asset("js/jquery.js") }}"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-        <script src="{{ asset("js/jquery-ui-1.8.20.custom.min.js") }}"></script>
-        <script src="{{ asset("js/jquery-ui.js") }}"></script>
-        <script src="{{ asset("js/draggable.js") }}"></script>
-        <script src="{{ asset("js/quote.js") }}"></script>
-        <script src="{{ asset("js/turn.js") }}"></script>
-        <script src="{{ asset("js/zoom.js") }}"></script>
-        <script src="{{ asset("js/hash.js") }}"></script>
-        <script src="{{ asset("js/jgestures.min.js") }}"></script>
-        <script src="{{ asset("js/scissor.min.js") }}"></script>
-        <script src="{{ asset("js/modernizr.2.5.3.min.js") }}"></script>
-        <script src="{{ asset("js/dynamic-article.js") }}"></script>
-        <script>
-        $(document).ready(function(){
+	<script src="{{ asset("js/jquery.js") }}"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+	<script src="{{ asset("js/jquery-ui-1.8.20.custom.min.js") }}"></script>
+	<script src="{{ asset("js/jquery-ui.js") }}"></script>
+	<script src="{{ asset("js/draggable.js") }}"></script>
+	<script src="{{ asset("js/quote.js") }}"></script>
+	<script src="{{ asset("js/turn.js") }}"></script>
+	<script src="{{ asset("js/zoom.js") }}"></script>
+	<script src="{{ asset("js/hash.js") }}"></script>
+	<script src="{{ asset("js/jgestures.min.js") }}"></script>
+	<script src="{{ asset("js/scissor.min.js") }}"></script>
+	<script src="{{ asset("js/modernizr.2.5.3.min.js") }}"></script>
+	<script src="{{ asset("js/dynamic-article.js") }}"></script>
+	<script src="https://cdn.jsdelivr.net/npm/spectrum-colorpicker2@2.0.0/dist/spectrum.min.js"></script>
+	<script>
+		$(document).ready(function () {
+$("#datepicker").datepicker();
 
-$( "#datepicker" ).datepicker();
-function getMessage() {
-  const request = new XMLHttpRequest();
-  request.open("GET", {{ path('article_index')}})
+
+$("dater").filter($("#datepicker").val()).css("display", "none");
+$("#create").click(function (e) {
+e.preventDefault();
+console.log("clic");
+var titleP = $('#title').val();
+var contentP = $('#content').val();
+var color = $("#color-picker").val();
+
+
+$.ajax({
+url: '{{ path('postit') }}',
+method: "POST",
+data: {
+title: titleP,
+content: contentP,
+color: color,
+positionx: "0",
+positiony: "0"
+},
+success: function (data) {
+console.log(data);
+window.location.reload();
 }
-    $("#create").click(function(e){
-      e.preventDefault();
-        var titleP = $('#title').val();
-        var contentP = $('#content').val();
-
-        $.ajax({
-            url: '{{ path('postit') }}',
-            method: "POST",
-            data: {
-                title:titleP,
-                content:contentP
-            },
-            success:function(data){
-                console.log(data);
-                window.location.reload();
-            }
-        })
-    });
+})
+});
 
 })
-</script>
-        {% endblock %}
+	</script>
+{% endblock %}
