--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -16,9 +16,9 @@ body,html{
 
 .main-page {
   height:100%;
-  background-image: url(../img/bgd.jpg);
+  background-image: url(../img/liege.jpg);
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: contain;
   background-position-x: center;
   }
   div.gallery {
@@ -89,6 +89,7 @@ transform: rotate(2deg);
 -o-transform: rotate(2deg);
 -ms-transform: rotate(2deg);
 border-bottom-right-radius: 60px 10px;
+border-top-left-radius: 5px 10px;
 max-width: 300px;
 
    }     
