--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -79,6 +79,7 @@
 			<script src="{{ asset("js/scissor.min.js") }}"></script>
 			<script src="{{ asset("js/modernizr.2.5.3.min.js") }}"></script>
 			<script src="{{ asset("js/dynamic-article.js") }}"></script>
+			<script src="{{ asset("js/ui/datepicker-fr.js") }}"></script>
 			<script src="https://cdn.jsdelivr.net/npm/spectrum-colorpicker2@2.0.0/dist/spectrum.min.js"></script>
 			<script>
 				$(document).ready(function () {
