--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -9,7 +9,7 @@
     <div class="row">
         <div class="col-1"></div>
         <div class="col-10 d-flex justify-content-center" style="height:800px;align-items:center;font-family: Georgia, serif;font-size:1rem;">
-            <p class="hit-the-floor">Macramé</p>
+            <p class="hit-the-floor">Makramé</p>
         </div>
         <div class="col-1"></div>
     </div>
